--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="h1_text_size">40sp</dimen>
+    <dimen name="main_menu_left_margin">50dp</dimen>
+    <dimen name="main_menu_right_margin">50dp</dimen>
 </resources>
